tests/error/undef_parent.gw
#! [contains] find parent
class C extends Undefined {}
var C c;
<<< c >>>;
